# TCC

./: README.md  README.md~
Manipulacao antes do alcione/: Functions to make  adsmakefile  classe_arquivo.C  classe_funcao.h  classe_reg.C  classe_reg.h  conn.php  index.php  variavel.h
Manipulacao de arquivo/: Functions to make  Functions to make~  Makefile1  arquivo  ca  cl  classe_arquivo.C  classe_arquivo.C~  classe_arquivo.cpp~  classe_arquivo.h  classe_arquivo.h~  classe_intermediaria.C  classe_intermediaria.h  classe_reg.C  classe_reg.C~  classe_reg.cpp~  classe_reg.h  classe_reg.h~  classe_var.C  classe_var.C~  classe_var.cpp  classe_var.cpp~  classe_var.h  classe_var.h~  conn.php~  cv  index.php  index.php~  mani  manipulacao_basica.cpp  manipulacao_basica.cpp~  regex.cpp  regex.cpp~  t  teste  testes gerais.cpp  testes gerais.cpp~
Manipulacao de arquivo/nbproject/: Package-Default.bash  configurations.xml  project.xml
Manipulacao de arquivo/nbproject/private/: configurations.xml
Manipulacao de arquivo/projeto/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  acinclude.m4  config.h  config.h.in  config.status  configure  configure.ac  consulta.db  tcc-evandro-1.0.0.tar.lzma  tcc-evandro-1.0.1.tar.lzma
Manipulacao de arquivo/projeto/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
Manipulacao de arquivo/projeto/nbproject/: Package-Default.bash  configurations.xml  project.xml
Manipulacao de arquivo/projeto/nbproject/private/: Default.properties
Manipulacao de arquivo/projeto/src/: Makefile  Makefile.am  Makefile.in  TCC  classe_arquivo.C  classe_arquivo.h  classe_aspas.C  classe_aspas.h  classe_codigo.C  classe_codigo.h  classe_intermediaria.C  classe_intermediaria.h  classe_linha.C  classe_linha.h  classe_reg.C  classe_reg.h  classe_var.C  classe_var.h  editor.C  editor.h  phpsec.db  variavel.h
Manipulacao de arquivo/projeto/src/.deps/: TCC-classe_arquivo.Po  TCC-classe_codigo.Po  TCC-classe_intermediaria.Po  TCC-classe_var.Po  TCC-editor.Po  TCC-main.Po
Manipulacao de arquivo/projeto/src/nbproject/: configurations.xml
Manipulacao de arquivo/projeto/src/nbproject/private/: Default.properties
Manipulacao de arquivo/projeto/src2/: Makefile.in  TCC  classe_arquivo.C~  classe_codigo.C  classe_linha.C  classe_linha.h  classe_reg.C  classe_reg.C~  classe_reg.h  editor.C  editor.C~  editor.h  editor.h~  main.C  main.C~  phpsec.db  seguranca.db
Manipulacao de arquivo/projeto/src2/.deps/: TCC-classe_aspas.Po  TCC-classe_linha.Po  TCC-editor.Po
Manipulacao de arquivo/projeto/test/: classe_implementada.php  index.php  index.php~  teste.php  teste.php.save
Manipulacao de arquivo/projeto_antes_da_integracao/: Makefile  Makefile.am  NEWS  config.h  config.h.in  config.status
Manipulacao de arquivo/projeto_antes_da_integracao/autom4te.cache/: requests  traces.1
testes/: manipulacao_basica.cpp  reg  regex.cpp  regex.cpp~  tes  test  vect  vector.C  vector.C~
(+13 files in other folders)
