SUBDIRS = src

Editordocdir = ${prefix}/docs
Editordoc_DATA = AUTHORS ChangeLog COPYING NEWS README INSTALL

Basedir = ${prefix}
Base_DATA = consulta.db

Testedir = $(prefix)/test
Teste_DATA = test/classe_implementada.php  test/conn.php  test/index.php test/teste.php

EXTRA_DIST = $(Editordoc_DATA) $(Base_DATA) $(Teste_DATA) TCC-Evandro.anjuta